changed colors and added line breaks to message form

--- a/profile-page.html
+++ b/profile-page.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <main>
-    <header>
-        <h1>Rudy V: Not the Web Developer You Deserve; the one You Need</h1>
-    </header>
-    <section id="about">
-        <h2>About Me</h2>
-            <p>Just a simple man, with simple web development skills</p>
-            <img src="Discord.jpg" alt="Yoshi crying" title="How could Mario do this??">
-    </section>
-    <section id="skills list">
-            <h3>Current Skills:</h3>
-            <ul>
-            <li>Basic JavaScript Knowledge</li>
-            <li>Bilingual</li>
-            <li>Working Knowledge of Microsoft Suite</li>
-            </ul>
-    </section>
-    <footer>
-        <p>&copy; Prestige Worldwide LLC</p>
-    </footer>
-    </main>
-</body>
+    <head>
+        <link rel="stylesheet" type="text/css" href="styles.css">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Rudy V. Profile 2: Electric Boogaloo</title>
+    </head>
+    <body>
+        <header>
+            <h1>Rudy V.</h1>
+            <h3>Not the Web Developer You Deserve; the One You Need</h3>
+            <hr />
+        </header>
+        <main>
+        <section id="about">
+            <h2>About Me</h2>
+                <img src="Discord.jpg" alt="Yoshi crying" title="How could Mario do this??">
+                <p>Just a simple man with even simpler web development skills</p>
+
+        </section>
+        <section id="skills list">
+                <h4>Current Skills:</h4>
+                <ul>
+                <li>Basic JavaScript Knowledge</li>
+                <li>Bilingual</li>
+                <li>Working Knowledge of Microsoft Suite</li>
+                </ul>
+        </section>
+        <footer>
+            <p>&copy; Prestige Worldwide LLC</p>
+        </footer>
+        </main>
+    </body>
 </html>
