--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
             <div class="infoform-container">
         <form action="form-process.php" method="POST" class="infoform-form">
             <label for="name">Your Name</label>
-            <input type="text" id="name" name="fullName" required />
+            <input type="text" id="name" name="fullName" required /><br/>
             <label for="email">Your Email Address</label>
-            <input type="email" id="email" name="email" required />
+            <input type="email" id="email" name="email" required /><br/>
             <label for="message">Your Message</label>
             <textarea name="message" id="message" cols="30" rows="10"></textarea>
             <button type="submit">Send</button>
